@@ -1,10 +1,8 @@
-"2 tikz",
+"2 lua tikz",
 "?set terminal lua tikz",
 "?set term lua tikz",
 "?term lua tikz",
-"?tikz",
-" The TikZ driver is an output driver for the generic Lua terminal.",
-" Please read the Lua terminal section for additional information.",
+" The TikZ driver is one output mode of the generic Lua terminal.",
 "",
 " Syntax:",
 "     set terminal lua tikz",
