@@ -1,3 +1,8 @@
+2011-02-23  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* term/lua/gnuplot-tikz.lua term/lua/gnuplot-tikz.help:
+	Fix redundant definitions that broke TeX-based documentation.
+
 2011-02-23  Shigeharu Takeno  <shige@iee.niit.ac.jp>
 
 	* docs/gnuplot.doc: correct typos; revive some "html" anchors
